--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: android
 dist: trusty
+before_install:
+    - yes | sdkmanager "platforms;android-28"
 android:
   components:
     # Uncomment the lines below if you want to
