--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: android
 dist: trusty
 before_install:
     - yes | sdkmanager "platforms;android-28"
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 android:
   components:
     # Uncomment the lines below if you want to
@@ -22,5 +27,5 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    #- sys-img-x86-android-26
+    - sys-img-x86-android-26
     #- sys-img-armeabi-v7a-android-17
