--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
+    def nav_version = "2.2.0-alpha03"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
 
 
